--- a/rapport/classifieurProfils.tex
+++ b/rapport/classifieurProfils.tex
@@ -1,4 +1,4 @@
-\subsection{Classifieurs par profils et histogrammes horizontaux et verticaux}
+﻿\subsection{Classifieurs par profils et histogrammes horizontaux et verticaux}
 \subsubsection{Présentation de la méthode}
 Le premier classifieur développé se base sur la détermination de vecteurs caractéristiques de la main à reconnaitre. Il a été subdivisé en deux sous classes, dont chacune se base sur une caractéristique différente. Ce classifieur travaille sur les images des mains segmentées et extraites de l'image originale.
 
@@ -18,9 +18,9 @@ Ainsi, on détermine la morphologie globale de la main à traiter. Il est à not
 
 La seconde classe quant à elle s'intéresse aux histogrammes. Pour un certain nombre de lignes, on compte le nombre de pixels constitutifs de la main à traiter (dans notre cas, les pixels blancs), afin de déterminer non pas la morphologie de la main à reconnaitre, mais la densité de la ligne considérée. Selon le même principe, l'histogramme d'un certain nombre de colonnes est calculé. Ces histogrammes sont également normalisés afin de pouvoir comparer des images de dimensions différentes.
 
-Le nombre de lignes à considérer est paramétrable à travers la variable NB\_PROFILES. Cette variable représente en effet le nombre de lignes et de colonnes à considérer pour déterminer les profils ou les histogrammes horizontaux et verticaux. Plus le nombre de lignes considérées est important, plus le profil global du caractère sera précis. Par conséquent, ce paramètre a une influence directe très importante sur le taux de reconnaissance des mains, mais également sur le coût d’exécution. Si une valeur trop basse est choisie, la détection de la morphologie de la main risque d’être trop peu significative pour obtenir des résultats probants. A l’inverse si une valeur trop élevée est choisie, la différence entre deux mains d’une même classe sera évaluée comme étant importante. Par ailleurs, l'augmentation du nombre de ligne à évaluer induit également une augmentation du temps de traitement des images.
+Le nombre de lignes à considérer est paramétrable à travers la variable NB\_PROFILES. Cette variable représente en effet le nombre de lignes et de colonnes à considérer pour déterminer les profils ou les histogrammes horizontaux et verticaux. Plus le nombre de lignes considérées est important, plus le profil global du caractère sera précis. Par conséquent, ce paramètre a une influence directe très importante sur le taux de reconnaissance des mains, mais également sur le coût d’exécution. Si une valeur trop basse est choisie, la détection de la morphologie de la main risque d’être trop peu significative pour obtenir des résultats probants. A l’inverse si une valeur trop élevée est choisie, la différence entre deux mains d’une même classe sera évaluée comme étant importante. Par ailleurs, l'augmentation du nombre de lignes à évaluer induit également une augmentation du temps de traitement des images.
 
-	Afin de disposer de points de comparaisons pour l'image à traiter, on établie une base de référence, subdivisée en un certain nombre de classes représentant chacune un nombre de doigts. Basiquement, la base est constituée de 6 classes, numérotées de 0 à 5 et constituées chacune d'un certain nombre d'images de références présentant le nombre de doigts correspondant à la classe en question. Pour établir cette base, on traite toutes les images de chaque classe afin de déterminer les vecteurs caractéristiques, profils ou histogrammes. Une fois toutes les images de la base traitées, on établie une moyenne des profils ou des histogrammes de chaque classe, afin d'obtenir le vecteur caractéristique de chaque classe de la base. C'est à partir de ces vecteurs moyens que chaque image à reconnaitre sera comparée. 	
+	Afin de disposer de points de comparaisons pour l'image à traiter, on établit une base de référence, subdivisée en un certain nombre de classes représentant chacune un nombre de doigts. Basiquement, la base est constituée de 6 classes, numérotées de 0 à 5 et constituées chacune d'un certain nombre d'images de références présentant le nombre de doigts correspondant à la classe en question. Pour établir cette base, on traite toutes les images de chaque classe afin de déterminer les vecteurs caractéristiques, profils ou histogrammes. Une fois toutes les images de la base traitées, on établit une moyenne des profils ou des histogrammes de chaque classe, afin d'obtenir le vecteur caractéristique de chaque classe de la base. C'est à partir de ces vecteurs moyens que chaque image à reconnaitre sera comparée. 	
 
 	La comparaison s'effectue par distance euclidienne entre le vecteur caractéristique moyen de chaque classe et le vecteur caractéristique de l'image à reconnaitre. Les vecteurs caractéristiques horizontaux et verticaux sont combinés en un seul par simple concaténation. On obtient ainsi la distance de l'image traitée à chacune des classes. Plus cette distance est faible, plus l'image à reconnaitre présente de similarités avec la classe en question. Ces distances à chaque classe sont par ailleurs transformées en taux de probabilité, à travers la formule :
 
@@ -36,7 +36,7 @@ Il est à noter que les 6 classes de la base, représentant le nombre de doigts,
 
 \subsubsection{Résultats}
 
-es résultats obtenus sont très aléatoires, en fonction des différents paramètres intervenant. Ainsi, d'une base d'apprentissage à une autre, d'une image testée à une autre, le taux de réussite oscille entre 20\% et plus de 80\%, en atteignant parfois 100\% pour certaines séries d'images. Cependant les résultats restent très irréguliers, et restent en moyennent autours de 50\% de réussite. Par ailleurs, une combinaison de ces deux classifieurs donne également des résultats très irréguliers, parfois améliorant quelque peut le taux de détection, parfois le dégradant. Nous pensons que la base d'apprentissage constituée reste trop restreinte pour permettre d'obtenir des résultats probants. 
+Les résultats obtenus sont très aléatoires, en fonction des différents paramètres intervenant. Ainsi, d'une base d'apprentissage à une autre, d'une image testée à une autre, le taux de réussite oscille entre 20\% et plus de 80\%, en atteignant parfois 100\% pour certaines séries d'images. Cependant les résultats restent très irréguliers, et restent en moyennent autours de 50\% de réussite. Par ailleurs, une combinaison de ces deux classifieurs donne également des résultats très irréguliers, parfois améliorant quelque peut le taux de détection, parfois le dégradant. Nous pensons que la base d'apprentissage constituée reste trop restreinte pour permettre d'obtenir des résultats probants. 
 
 Dans tous les résultats suivant, voici la correspondance des différents paramètres :
 \begin{itemize}
@@ -72,11 +72,11 @@ L'amélioration la plus importante à apporter est probablement l'enrichissement
 
 \subsection{Classifieur densités}
 
-Le second classifieur implémenté s'intéresse à la densité de l'image à traiter. Chaque image (après segmentation et extraction de la main) est subdivisée en plusieurs zones de tailles égales. Puis, pour chaque zone, on détermine le nombre de pixels appartenant à la main (dans notre cas les pixels blanc). Ce nombre de pixel est ensuite normalisé, par division par le nombre total de pixel de la zone. On obtiens ainsi la densité des différentes zones de l'image.
+Le second classifieur implémenté s'intéresse à la densité de l'image à traiter. Chaque image (après segmentation et extraction de la main) est subdivisée en plusieurs zones de tailles égales. Puis, pour chaque zone, on détermine le nombre de pixels appartenant à la main (dans notre cas les pixels blanc). Ce nombre de pixel est ensuite normalisé, par division par le nombre total de pixel de la zone. On obtient ainsi la densité des différentes zones de l'image.
 
-	Sur le même principe que pour les classifieurs précédents, on établie une base d'apprentissage divisée en plusieurs classes correspondant au nombre de doigts. Chaque classe de la base est constituée d'un certain nombre d'images présentant des mains du nombre de doigts correspondant à la classe. Chaque image à traiter est comparée avec cette base, et l'on obtient un vecteur de probabilité de chaque classe sur le même modèle que précédemment.
+	Sur le même principe que pour les classifieurs précédents, on établit une base d'apprentissage divisée en plusieurs classes correspondant au nombre de doigts. Chaque classe de la base est constituée d'un certain nombre d'images présentant des mains du nombre de doigts correspondant à la classe. Chaque image à traiter est comparée avec cette base, et l'on obtient un vecteur de probabilité de chaque classe sur le même modèle que précédemment.
 
-	Par ailleurs, le nombre de subdivision de l'image est également paramétrable via les variables M et N. A nouveau, ce nombre de zone a une influence importante sur le taux de détection. Un nombre trop faible ne permettra pas d'obtenir une carte de densité suffisamment précise pour obtenir des résultats satisfaisant. A l'inverse, un trop grand nombre de zones peut produire des écarts importants, et le taux de reconnaissance se dégrade.
+	Par ailleurs, le nombre de subdivisions de l'image est également paramétrable via les variables M et N. A nouveau, ce nombre de zones a une influence importante sur le taux de détection. Un nombre trop faible ne permettra pas d'obtenir une carte de densité suffisamment précise pour obtenir des résultats satisfaisants. A l'inverse, un trop grand nombre de zones peut produire des écarts importants, et le taux de reconnaissance se dégrade.
 
 \subsubsection{Résultats}
 \begin{figure}[htb!]
