Dernières corrections fichiers .tex

--- a/rapport/detectionMouvements.tex
+++ b/rapport/detectionMouvements.tex
@@ -98,7 +98,7 @@ Une fois obtenue l’estimation d’un mouvement d’une image à l’autre, on 
 
 \subsubsection{Redimensionnement de la boîte}
 
-Il y a un dernier point qui pose cependant problème et auquel nous avons du répondre : Lorsque la main est en mouvement, elle peut s’approcher ou s’éloigner de la caméra, ce qui est l’enjeu principal de la séquence d’images. De ce fait nait une problématique : 
+Il y a un dernier point qui pose cependant problème et auquel nous avons du répondre : Lorsque la main est en mouvement, elle peut s’approcher ou s’éloigner de la caméra, ce qui est l’enjeu principal de la séquence d’images. De ce fait naît une problématique : 
 	Sans considérer le seuillage de la main, celle-ci s’agrandit ou se rétrécit, et la taille de la boite englobante doit donc être modifiée en conséquence.
 
 Solution envisagée:
