--- a/rapport/introduction.tex
+++ b/rapport/introduction.tex
@@ -5,4 +5,4 @@ Pour ce faire, nous avons effectué plusieurs traitements sur les images, que no
 
 Dans une seconde partie, nous présenterons les classifieurs développés afin d’interpréter l’image segmentée, mais également les méthodes de décision associées aux différents classifieurs ainsi que les résultats obtenus par ces derniers.
 
-Enfin, nous avons mis en œuvre une méthode permettant un suivi temporel d’une main dans une succession d’images. Les algorithmes développés seront présenté dans une dernière partie.
+Enfin, nous avons mis en œuvre une méthode permettant un suivi temporel d’une main dans une succession d’images. Les algorithmes développés seront présentés dans une dernière partie.
