--- a/rapport/redressement.tex
+++ b/rapport/redressement.tex
@@ -6,6 +6,6 @@ Soit $I$ une image segmentée et binarisée d'une main, définissons $P \cup \ma
 
 \begin{figure}[htb!]
 
-\caption{Image segmentée et binarisé d'une main, avec en vert et rouge les deux vecteurs propres de la matrice de covariance.}
+\caption{Image segmentée et binarisée d'une main, avec en vert et rouge les deux vecteurs propres de la matrice de covariance.}
 \label{fig:pca}
 \end{figure}
