--- a/rapport/segmentation.tex
+++ b/rapport/segmentation.tex
@@ -77,7 +77,7 @@ Considérant l’ordre de connexité $8$, $V_1$ représente donc l’ensemble de
 \label{fig:pixelConnexite8}
 \end{figure}
 
-Après une batterie de tests, cette limite a été fixée à $5$. En dessous, la main peut être entièrement supprimée après application du traitement, tandis qu’au dessus, certains pixels gênants pour la reconnaissance peuvent être laissés sur l’image. L’opérateur est appliqué plusieurs fois, ce qui permet de grignoter le poignet, gênant pour la reconnaissance. L’histogramme de l’image est inversé avant application de l’opérateur. Voici ci-dessous, le résultat de la segmentation sur la première image du groupe $1$ (\autoref{fig:segmentationGrp1}).
+Après une batterie de tests, cette limite a été fixée à $5$. En dessous, la main peut être entièrement supprimée après application du traitement, tandis qu’au dessus, certains pixels gênants pour la reconnaissance peuvent être laissés sur l’image. L’opérateur est appliqué plusieurs fois, ce qui permet d'opérer une érosion du poignet, gênant pour la reconnaissance. L’histogramme de l’image est inversé avant application de l’opérateur. Voici ci-dessous, le résultat de la segmentation sur la première image du groupe $1$ (\autoref{fig:segmentationGrp1}).
 
 \begin{figure}
 \centerline{
@@ -106,7 +106,7 @@ Le taux de réussite s’avère très correct puisque 13 images sur 16 sont trai
 
 Dans les deux cas, l’algorithme doit être en mesure de détecter que l’étape de segmentation n’a pas été optimale, dans la mesure où la reconnaissance ne renverra pas de résultat. L’algorithme de segmentation ne peut cependant pas être corrigé simplement pour palier les problèmes et lorsqu’une main est effectivement présente dans l’image, il n’est actuellement pas en mesure de se focaliser sur cette dernière pour l’extraire. Une telle solution n’a pas été implémentée par manque de temps et également cela demeure un cas très particulier. En effet dans une application de suivi de la main et de reconnaissance de geste, il est évident que l’homme qui effectue les gestes va instinctivement placer les mains devant son corps et non l’inverse.
 
-Sur une autre base d’images qu’est le groupe 3, certaines images posent problème lorsque le bras est placé perpendiculairement à l’axe de vision de la caméra, autrement dit lorsque le bras et la main sont à égale distance de la caméra (images de 13 à 18). Le contraste de l’image s’avère alors très peu élevé et des pixels résiduels noirs, bien plus foncés que le membre à reconnaître faussent alors l’étape de segmentation.
+Sur une autre base d’images qu’est le groupe 3, certaines images posent problème lorsque le bras est placé perpendiculairement à l’axe de vision de la caméra, autrement dit lorsque le bras et la main sont à égale distance de la caméra (images de 13 à 18 dans le groupe). Le contraste de l’image s’avère alors très peu élevé et des pixels résiduels noirs, bien plus foncés que le membre à reconnaître faussent alors l’étape de segmentation.
 
 Dans le tableau ci-dessous, on observe un test sur 3 images. Comme on peut l’observer, la segmentation sur les deux premières est loin de fournir un résultat satisfait exploitable par la reconnaissance, tandis que la dernière est segmentée « parfaitement » sans correction nécessaire. Une solution a consisté à nettoyer l’image en prétraitement, afin de supprimer les pixels résiduels sombres, faussant la segmentation sur 5 des 18 images du groupe 3. Seulement, comme on peut le constater, cette correction s’avère être néfaste sur des images sur laquelle la segmentation était initialement réussie. Nous n’avons à l’heure actuelle pas exploré de piste nous permettant de traiter idéalement et automatiquement toutes les images.
 
